--- a/bai1/bai1.html
+++ b/bai1/bai1.html
@@ -9,7 +9,7 @@
             Cách 2: C + / -->
             <!-- Môn phát triển và ứng dụng web -->
              <p>Đây là một đoạn văn bản mô tả về môn học.</p>
-
+<!--thẻ p-->
              <!-- Đây là thẻ đề mục -->
               <h1> Đây là thẻ H1</h1>
               <h2> Đây là thẻ H2</h2>
@@ -37,6 +37,7 @@
                 x<sub>2</sub>
                 <br>
                 <img src="cho.jpg">
-
+                <!-- Thẻ a href là thẻ liên kết-->
+                <a href="../bai2/index.html">Chuyển sang bài 2</a>
         </body>
 </html>
