--- a/bai4/index.html
+++ b/bai4/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bai 4</title>
-    <style>
-
+    <!-- dùng thẻ style trước một thẻ sẽ tạo tất cả các thẻ giống thế đều có style như nhau -->
+    <style> 
         h1 {
             color: red;
         }
