--- a/bai5/index.html
+++ b/bai5/index.html
@@ -38,18 +38,54 @@
                 <!-- danh sách tin tức -->
                 <div class="tintuc-danhsach">
                     <div class="Baiviet"> 
-                        <img src="cho.jpg">
+                        <img src="cho.jpg" alt="Noi dung 1">
+                        <div class="slide_caption">
+                          <div class="text">Noi dung 1</div>
+                         <div class="date">21/11/2023 00:00</div>
+                        </div>
                     </div>
                     <div class="Baiviet">
-                        <img src="cho.jpg">
+                        <img src="cho.jpg" alt="Noi dung 2">
+                        <div class="text">Noi dung 2</div>
+                        <div class="date">21/11/2023 00:00</div>
                     </div>
                     <div class="Baiviet">
-                        <img src="cho.jpg">
+                        <img src="cho.jpg" alt="Noi dung 3">
+                        <div class="text">Noi dung 3</div>
+                        <div class="date">21/11/2023 00:00</div>    
                     </div>
                 </div>
+                <div class="thongbao">
+                  Thông Báo
+                </div>
+                <!-- danh sách thông báo -->
+                 <div class="thongbao-anh">
+                    <img src="cho.jpg">
+                 </div>
+                 <div class="thongbao-tintuc">
+                <tr>
+                    <td><span class="text" href="">Về việc phát bằng tốt nghiệp Đợt 3 (Bổ sung) - Năm học 2024 -2025 (Đợt xét 06/2025)<i>22/08/2025 09:31</i></span></td>
+                    <td><span class="text" href="">Về việc phát bằng tốt nghiệp Đợt 3 (Bổ sung) - Năm học 2024 -2025 (Đợt xét 06/2025)<i>22/08/2025 09:31</i></span></td>
+                    <td><span class="text" href="">Về việc phát bằng tốt nghiệp Đợt 3 (Bổ sung) - Năm học 2024 -2025 (Đợt xét 06/2025)<i>22/08/2025 09:31</i></span></td>
+                    <td><span class="text" href="">Về việc phát bằng tốt nghiệp Đợt 3 (Bổ sung) - Năm học 2024 -2025 (Đợt xét 06/2025)<i>22/08/2025 09:31</i></span></td>
+                    <td><span class="text" href="">Về việc phát bằng tốt nghiệp Đợt 3 (Bổ sung) - Năm học 2024 -2025 (Đợt xét 06/2025)<i>22/08/2025 09:31</i></span></td>
+                    <td><span class="text" href="">Về việc phát bằng tốt nghiệp Đợt 3 (Bổ sung) - Năm học 2024 -2025 (Đợt xét 06/2025)<i>22/08/2025 09:31</i></span></td>
+                    <td><span class="text" href="">Về việc phát bằng tốt nghiệp Đợt 3 (Bổ sung) - Năm học 2024 -2025 (Đợt xét 06/2025)<i>22/08/2025 09:31</i></span></td>
+                </tr>
+                 </div>
             </div>
         </div>
         <div class="phai"></div> <!-- nội dung bên phải -->
+        <div>
+            <div class="dangnhap">
+                                <b class="icon">icon</b><br> 
+                <input type="email" name="email" placeholder="Nhập email của bạn">
+            </div>
+            <div class="matkhau">
+                <b class="matkhau"></b>
+                <input type="password" name="email" placeholder="Nhập mật khẩu">
+            </div>
+        </div>
     </main>
 </body>
 </html>
