--- a/bai5/index.html
+++ b/bai5/index.html
@@ -65,7 +65,7 @@
                  <div class="thongbao-tintuc">
                 <tr>
                     <td><span class="text" href="">Về việc phát bằng tốt nghiệp Đợt 3 (Bổ sung) - Năm học 2024 -2025 (Đợt xét 06/2025)<i>22/08/2025 09:31</i></span></td>
-                    <td><span class="text" href="">Về việc phát bằng tốt nghiệp Đợt 3 (Bổ sung) - Năm học 2024 -2025 (Đợt xét 06/2025)<i>22/08/2025 09:31</i></span></td>
+                    <td><span class="text" href="">Toi hoc bai<i>22/08/2025 09:31</i></span></td>
                     <td><span class="text" href="">Về việc phát bằng tốt nghiệp Đợt 3 (Bổ sung) - Năm học 2024 -2025 (Đợt xét 06/2025)<i>22/08/2025 09:31</i></span></td>
                     <td><span class="text" href="">Về việc phát bằng tốt nghiệp Đợt 3 (Bổ sung) - Năm học 2024 -2025 (Đợt xét 06/2025)<i>22/08/2025 09:31</i></span></td>
                     <td><span class="text" href="">Về việc phát bằng tốt nghiệp Đợt 3 (Bổ sung) - Năm học 2024 -2025 (Đợt xét 06/2025)<i>22/08/2025 09:31</i></span></td>
@@ -75,15 +75,16 @@
                  </div>
             </div>
         </div>
-        <div class="phai"></div> <!-- nội dung bên phải -->
+        <div class="phai"> <!-- nội dung bên phải -->
         <div>
-            <div class="dangnhap">
-                                <b class="icon">icon</b><br> 
-                <input type="email" name="email" placeholder="Nhập email của bạn">
-            </div>
-            <div class="matkhau">
-                <b class="matkhau"></b>
-                <input type="password" name="email" placeholder="Nhập mật khẩu">
+                <div class="dangnhap">
+                                <b class="icon">DangNhap</b><br> 
+                 <input type="email" name="email" placeholder="Nhập email của bạn">
+                </div>
+                <div class="matkhau">
+                    <b class="matkhau"></b>
+                    <input type="password" name="email" placeholder="Nhập mật khẩu">
+                </div>
             </div>
         </div>
     </main>
