--- a/fpt/index.html
+++ b/fpt/index.html
@@ -380,8 +380,15 @@
   </div>
 
   <div class="footer-bottom">
-    Công ty Cổ phần Viễn Thông FPT - Người đại diện: Ông Hoàng Việt Anh. 
-    Trụ sở: Tầng 2, Tòa nhà FPT Cầu Giấy, 17 Phố Duy Tân, Quận Cầu Giấy, Hà Nội
+     Công ty Cổ phần Viễn Thông FPT - Người đại diện: Ông Hoàng Việt Anh. Trụ sở: Tầng 2, Tòa nhà FPT Cầu Giấy, Số 17 Phố Duy Tân, Phường Dịch Vọng Hậu, Quận Cầu Giấy, TP.Hà Nội
+<br>
+Địa chỉ liên lạc: Tầng 9, Block A, tòa nhà FPT Cầu Giấy, số 10 Phạm Văn Bạch, quận Cầu Giấy, TP. Hà Nội
+<br>
+Số điện thoại liên hệ: 024 7300 2222. Thư điện tử: hotrokhachhang@fpt.com hoặc hotrofptplay@fpt.com
+<br>
+Giấy chứng nhận đăng ký doanh nghiệp số 0101778163 do Sở Kế hoạch và Đầu tư Thành phố Hà Nội cấp lần đầu ngày 28/7/2005, cấp đăng ký thay đổi lần thứ 32 vào ngày 21/12/2023.
+<br>
+Giấy phép cung cấp dịch vụ phát thanh, truyền hình trả tiền số 377/GP-BTTTT cấp sửa đổi bổ sung lần 1 ngày 10/10/2023
   </div>
 </footer>
 </body>
